--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <title>Home</title>
     <!-- CSS Section -->
     <link rel="stylesheet" href="Contents\css\bootstrap.min.css">
-    <link rel="stylesheet" href="Contents\css\bootstrap-theme.min.css">
+    <!--<link rel="stylesheet" href="Contents\css\bootstrap-theme.min.css">-->
     <link rel="stylesheet" href="Contents\css\font-awesome.min.css">
     <link rel="stylesheet" href="Contents/app.css">
 </head>
 
 <body>
 
-    <nav class="navbar navbar-inverse">
+    <nav class="navbar navbar-default">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
@@ -44,7 +44,7 @@
 
     <div class="container">
         <div class="row">
-            <h1>Lesson 3 - Arrays and Control Flow</h1>
+            <h1>Lesson 4 - Debugging and Error Handling</h1>
 
             <p id="paragraphOne"></p>
 
