--- a/projects.html
+++ b/projects.html
@@ -7,14 +7,14 @@
     <title>Projects</title>
     <!-- CSS Section -->
     <link rel="stylesheet" href="Contents\css\bootstrap.min.css">
-    <link rel="stylesheet" href="Contents\css\bootstrap-theme.min.css">
+    <!--<link rel="stylesheet" href="Contents\css\bootstrap-theme.min.css">-->
     <link rel="stylesheet" href="Contents\css\font-awesome.min.css">
     <link rel="stylesheet" href="Contents/app.css">
 </head>
 
 <body>
 
-    <nav class="navbar navbar-inverse">
+    <nav class="navbar navbar-default">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
