--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Me</title>
+    <title>Contact Me</title>
     <!-- CSS Section -->
     <link rel="stylesheet" href="Contents\css\bootstrap.min.css">
     <!--<link rel="stylesheet" href="Contents\css\bootstrap-theme.min.css">-->
@@ -33,8 +33,8 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="index.html"><i class="fa fa-home fa-lg"></i> Home</a></li>
                     <li><a href="projects.html"><i class="fa fa-th fa-lg"></i> Projects</a></li>
-                    <li class="active"><a href="about.html"><i class="fa fa-info fa-lg"></i> About Me</a></li>
-                    <li><a href="contact.html"><i class="fa fa-phone fa-lg"></i> Contact Me</a></li>
+                    <li><a href="about.html"><i class="fa fa-info fa-lg"></i> About Me</a></li>
+                    <li class="active"><a href="contact.html"><i class="fa fa-phone fa-lg"></i> Contact Me</a></li>
 
                 </ul>
             </div>
@@ -45,10 +45,9 @@
 
     <div class="container">
         <div class="row">
-            <h1>About Me</h1>
-
-            <p id="paragraphThree"></p>
-
+            <h1>Contact Me</h1>
+            
+            
 
         </div>
     </div>
