updated app.js to work with multiple pages

--- a/contact.html
+++ b/contact.html
@@ -67,12 +67,12 @@
                         <input type="tel" class="form-control" id="contactNumber" placeholder="Enter Contact Number" required>
                     </div>
                     <div class="form-group">
-                        <label for="message">Email</label>
+                        <label for="message">Message</label>
                         <textarea cols="3" rows="3" class="form-control" id="message" placeholder="Enter Your Message" required></textarea>
                     </div>
                     <div class="text-right">
                         <a id="cancelButton" href="index.html" class="btn btn-warning">Cancel</a>
-                        <a id="sendButton" href="#" class="btn btn-primary">Send</a>
+                        <button id="sendButton" class="btn btn-primary">Send</button>
                     </div>
                 </form>
             </div>
